--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
     <header id="cabecalho">
         <h1 id="titulo">Gabriel Rodrigues</h1>
     </header>
-    
+    <img id="minha_foto" src="images/minha_foto.jpg" alt="foto de Gabriel Rodrigues">
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Soft Skills</li>
+        <li>Protocolo HTTP</li>
+        <li>Shell</li>
+        <li>Kernel</li>
+    </ol>
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>Soft Skills: Comunicação</li>
+        <li>MySQL</li>
+        <li>Python</li>
+        <li>Back-End</li>
+        <li>Front-End</li>
+        <li>Soft Skills: Colaboração</li>
+        <li>Ciência da Computação</li>
+        <li>Algoritmo</li>
+        <li>Programação Orientada a Objetos</li>
+    </ul>
 </body>
 </html>
