--- a/index.html
+++ b/index.html
@@ -9,32 +9,40 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Gabriel Rodrigues</h1>
+            <h1 id="titulo">Gabriel Rodrigues</h1>
     </header>
-    <img id="minha_foto" src="images/minha_foto.jpg" alt="foto de Gabriel Rodrigues">
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Bash</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Soft Skills</li>
-        <li>Protocolo HTTP</li>
-        <li>Shell</li>
-        <li>Kernel</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>Soft Skills: Comunicação</li>
-        <li>MySQL</li>
-        <li>Python</li>
-        <li>Back-End</li>
-        <li>Front-End</li>
-        <li>Soft Skills: Colaboração</li>
-        <li>Ciência da Computação</li>
-        <li>Algoritmo</li>
-        <li>Programação Orientada a Objetos</li>
-    </ul>
+        <img id="minha_foto" src="images/minha_foto.jpg" alt="foto de Gabriel Rodrigues">
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Soft Skills</li>
+            <li>Protocolo HTTP</li>
+            <li>Shell</li>
+            <li>Kernel</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>Soft Skills: Comunicação</li>
+            <li>MySQL</li>
+            <li>Python</li>
+            <li>Back-End</li>
+            <li>Front-End</li>
+            <li>Soft Skills: Colaboração</li>
+            <li>Ciência da Computação</li>
+            <li>Algoritmo</li>
+            <li>Programação Orientada a Objetos</li>
+        </ul>
+        <footer id="rodape">Projeto elaborado por Gabriel Rodrigues
+        </footer>
+        <a href="https://rodriguestg.github.io" target="_blank">Meu Portfólio
+        </a>
+        <article>Entrei na Trybe com o intuito de constriur uma carreira de sucesso em desenvolvimento web, e até o momento o aprendizado tem sido fascinante, em alguns recursos já tinha obtido um certo background de forma autodidata, mas consegui aprender novas e melhores formas de aplicar os códigos em HTML e CSS, então tem sido bem intenso e produtivo, estou encerrando o meu primeiro projeto e ficando animado para os próximos passos.</article>
+    <section>
+        <aside>Minha trajetória e aprendizado aqui na Trybe, tem sido única, tenho absorvido bem o conteúdo dos blocos, e ficando animado para as próximas etapas.</aside>
+    </section>
 </body>
 </html>
