Identando corretamente, colocando elementos para o HTML ser Semântico, concluindo os requisitos 10 e 11

--- a/index.html
+++ b/index.html
@@ -1,48 +1,78 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+        <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Lessons Learned</title>
-    <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Projeto Lessons Learned</title>
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="cabecalho">
+        <section>
             <h1 id="titulo">Gabriel Rodrigues</h1>
+        </section>
+        <nav>
+            <ul>
+                <li>Lições Aprendidas</li>
+                <li>Lições a serem aprendendidas</li>
+                <li>Minha experiência Trybe</li>
+                <li>Portifólio</li>
+            </ul>
+        </nav>
     </header>
-        <img id="minha_foto" src="images/minha_foto.jpg" alt="foto de Gabriel Rodrigues">
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Bash</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Soft Skills</li>
-            <li>Protocolo HTTP</li>
-            <li>Shell</li>
-            <li>Kernel</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>Soft Skills: Comunicação</li>
-            <li>MySQL</li>
-            <li>Python</li>
-            <li>Back-End</li>
-            <li>Front-End</li>
-            <li>Soft Skills: Colaboração</li>
-            <li>Ciência da Computação</li>
-            <li>Algoritmo</li>
-            <li>Programação Orientada a Objetos</li>
-        </ul>
-        <footer id="rodape">Projeto elaborado por Gabriel Rodrigues
-        </footer>
-        <a href="https://rodriguestg.github.io" target="_blank">Meu Portfólio
-        </a>
-        <article>Entrei na Trybe com o intuito de constriur uma carreira de sucesso em desenvolvimento web, e até o momento o aprendizado tem sido fascinante, em alguns recursos já tinha obtido um certo background de forma autodidata, mas consegui aprender novas e melhores formas de aplicar os códigos em HTML e CSS, então tem sido bem intenso e produtivo, estou encerrando o meu primeiro projeto e ficando animado para os próximos passos.</article>
-    <section>
-        <aside>Minha trajetória e aprendizado aqui na Trybe, tem sido única, tenho absorvido bem o conteúdo dos blocos, e ficando animado para as próximas etapas.</aside>
-    </section>
+    <main>
+        <section>
+            <div>
+               <img id="minha_foto" src="images/minha_foto.jpg" alt="foto de Gabriel Rodrigues">
+            </div>
+            <div>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Bash</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Soft Skills</li>
+                    <li>Protocolo HTTP</li>
+                    <li>Shell</li>
+                    <li>Kernel</li>
+                </ol>
+                <ul id="licoes_a_aprender">
+                    <li>JavaScript</li>
+                    <li>Soft Skills: Comunicação</li>
+                    <li>MySQL</li>
+                    <li>Python</li>
+                    <li>Back-End</li>
+                    <li>Front-End</li>
+                    <li>Soft Skills: Colaboração</li>
+                    <li>Ciência da Computação</li>
+                    <li>Algoritmo</li>
+                    <li>Programação Orientada a Objetos</li>
+                </ul>
+            </div>
+            <article>
+                    <p>
+                        Entrei na Trybe com o intuito de constriur uma carreira de sucesso em desenvolvimento web, e até o momento o aprendizado tem sido fascinante, em alguns recursos já tinha obtido um certo background de forma autodidata, mas consegui aprender novas e melhores formas de aplicar os códigos em HTML e CSS, então tem sido bem intenso e produtivo, estou encerrando o meu primeiro projeto e ficando animado para os próximos passos.
+                    </p>
+            </article>
+            <div>
+                <a href="https://rodriguestg.github.io" target="_blank">
+                <h2>Meu Portfólio</h2>
+                </a>
+            </div>
+        </section>
+        <aside>
+            <section>
+                <p>
+                    Minha trajetória e aprendizado aqui na Trybe, tem sido única, tenho absorvido bem o conteúdo dos blocos, e ficando animado para as próximas etapas.
+                </p>
+            </section>
+        </aside>
+    </main>
+    <footer id="rodape">
+        <h3>Projeto elaborado por Gabriel Rodrigues</h3>
+    </footer>
 </body>
 </html>
