--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projeto Lessons Learned</title>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,9 +13,9 @@
         <section>
             <h1 id="titulo">Gabriel Rodrigues</h1>
         </section>
-        <nav>
-            <ul>
-                <li>Lições Aprendidas</li>
+        <nav id="navegacao">
+            <ul id="menu1">
+                <li> Lições Aprendidas</li>
                 <li>Lições a serem aprendendidas</li>
                 <li>Minha experiência Trybe</li>
                 <li>Portifólio</li>
@@ -26,7 +27,7 @@
             <div>
                <img id="minha_foto" src="images/minha_foto.jpg" alt="foto de Gabriel Rodrigues">
             </div>
-            <div>
+            <div class="lado-esquerdo">
                 <ol id="licoes_aprendidas">
                     <li>Unix</li>
                     <li>Bash</li>
@@ -52,7 +53,7 @@
                     <li>Programação Orientada a Objetos</li>
                 </ul>
             </div>
-            <article>
+            <article class="lado-direito">
                     <p>
                         Entrei na Trybe com o intuito de constriur uma carreira de sucesso em desenvolvimento web, e até o momento o aprendizado tem sido fascinante, em alguns recursos já tinha obtido um certo background de forma autodidata, mas consegui aprender novas e melhores formas de aplicar os códigos em HTML e CSS, então tem sido bem intenso e produtivo, estou encerrando o meu primeiro projeto e ficando animado para os próximos passos.
                     </p>
@@ -72,6 +73,12 @@
         </aside>
     </main>
     <footer id="rodape">
+        <table>
+            <th>Lições Aprendidas</th>
+            <th>Lições a serem aprendendidas</th>
+            <th>Minha experiência Trybe</th>
+            <th>Portifólio</th>
+        </table>
         <h3>Projeto elaborado por Gabriel Rodrigues</h3>
     </footer>
 </body>
