atualizando erros de tabela

--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
     </main>
     <footer id="rodape">
         <table>
-            <th>Lições Aprendidas</th>
-            <th>Lições a serem aprendendidas</th>
-            <th>Minha experiência Trybe</th>
-            <th>Portifólio</th>
+            <tr>
+                <td class="dadosTabela">Lições Aprendidas</td>
+                <td class="dadosTabela">Lições a serem aprendendidas</td>
+                <td class="dadosTabela">Minha experiência Trybe</td>
+                <td class="dadosTabela">Portifólio</td>
+            </tr>
         </table>
         <h3>Projeto elaborado por Gabriel Rodrigues</h3>
     </footer>
